--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
     font-family: "Source Code Pro", monospace;
     position: relative;
     width: max-content;
+    margin-top: 0;
 }
 
 #intro h1::before,
@@ -74,7 +75,7 @@ body {
 #about {
     min-height: 70vh;
     width: 90%;
-    margin: auto;
+    margin: auto auto 8rem auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -101,6 +102,7 @@ body {
 #about > div {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 #about h1 {
@@ -108,6 +110,52 @@ body {
     text-align: left;
     width: 100%;
     margin: 0;
+}
+
+/* Tooltip */
+.svg {
+    position: relative;
+}
+
+.svg .tooltiptext {
+  visibility: hidden;
+  width: auto;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: black;
+  text-align: center;
+  border-radius: 8px;
+  padding: 5px;
+  font-size: 14px;
+  position: absolute;
+  z-index: 1;
+  bottom: -77%;
+  right: 0;
+}
+
+.svg:hover .tooltiptext {
+  visibility: visible;
+}
+/* ------- */
+
+#about > div > article {
+    padding: 0.5rem;
+}
+
+#getInTouch {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+}
+
+#getInTouch > span {
+    display: flex;
+    justify-content: space-around;
+    width: 51%;
+}
+
+#getInTouch a {
+    display: flex;
+    margin: auto 0.5rem;
 }
 
 #projects {
@@ -148,7 +196,7 @@ body {
     margin-right: 0.5rem;
 }
 
-.links img {
+.svg img {
     width: 30px;
     height: 33px;
 }
@@ -177,8 +225,22 @@ body {
         margin: 0;
     }
 
+    #about {
+        margin: auto auto 6rem auto;
+    }
+
     #about > div {
         flex-direction: row;
+        padding: 0 0 72px 0;
+    }
+
+    #about > div > article {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        background-color: rgba(255, 255, 255, 0.9);
+        width: 66%;
+        z-index: 2;
     }
     
     #about img {
@@ -188,6 +250,10 @@ body {
     #about div div {
         margin: auto;
         padding: 1rem;
+    }
+
+    #getInTouch > span {
+        width: 60%;
     }
 
     #projects > div {
@@ -266,7 +332,33 @@ body {
         column-gap: 4%;
         margin: auto;
     }
+
+    #about > div > div {
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.9);
+        width: 52%;
+        right: 0;
+        top: -13%;
+    }
+
+    #about > div > article {
+        right: 0;
+        left: auto;
+        top: 66%;
+        bottom: auto;
+        width: 54%;
+    }
     
+    #getInTouch > span {
+        width: 52%;
+    }
+
+    .svg .tooltiptext {
+        left: 50%;
+        right: auto;
+        transform: translateX(-50%);
+    }
+
     #about img {
         max-width: 100%;
     }
@@ -295,7 +387,7 @@ body {
         margin-right: 1.5rem;
     }
 
-    .links img {
+    .svg img {
         width: 34px;
         height: 38px;
     }
@@ -336,6 +428,10 @@ body {
         font-size: 34px;
     }
 
+    #about > div > article {
+        top: 71%;
+    }
+
     p {
         font-size: 28px;
     }
@@ -353,7 +449,7 @@ body {
         margin-right: 1rem;
     }
 
-    .links img {
+    .svg img {
         width: 36px;
         height: 40px;
     }
@@ -378,12 +474,12 @@ body {
 @media (min-width: 1200px) {
     #about > div {
         width: 1024px;
-        height: 700px;
+        height: 500px;
         display: block;
         position: relative;
     }
 
-    #about img {
+    #about > div > img {
         position: absolute;
         top: 0;
         left: 0;
@@ -393,22 +489,39 @@ body {
     #about div div {
         position: absolute;
         display: block;
-        top: 41%;
-        left: 50%;
-        width: 33%;
+        top: 50%;
+        left: 45%;
+        width: 42%;
         background-color: white;
         padding: 0.5rem 1rem;
     }
 
+    #about > div > article {
+        left: 0;
+        top: 79%;
+        width: 47%;
+    }
+
+    .svg .tooltiptext {
+        left: 50%;
+        right: auto;
+        transform: translateX(0);
+    }
+
+    #projects > div {
+        grid-template-columns: 60% 40%;
+        column-gap: 0;
+    }
+
     .project_images > img:nth-child(1) {
-        left: -13%;
-        top: -4%;
+        left: -25%;
+        top: -5%;
         width: 376px;
     }
 
     .project_images > img:nth-child(2) {
-        left: 28%;
-        top: 19%;
+        left: 23%;
+        top: 25%;
         width: 434px;
     }
 
